# vmark

./: .dependency-cruiser.cjs  AGENTS.md  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.claude/docs-guardian/: config.json
.claude/hooks/: gha-tdd-guard.mjs
.claude/rules/: 21-website-docs.md  31-design-tokens.md  60-ai-governance.md
.github/workflows/: ci.yml  release.yml
.tokenize/: config.json  ignore
dev-docs/: README.md  architecture.md  large-file-open-pipeline.md
dev-docs/grills/: ai-governance-2026-05.md
dev-docs/plans/: 20260418-genie-in-workflow.md  20260418-housecleaning-metrics.md  20260418-housecleaning.md  20260419-i18n-polish-and-announce.md  20260419-i18n-release-notes.md  20260504-github-actions-workflow-viewer.md  20260504-mcp-pruning.md  20260506-multi-format-rebrand.md
scripts/: add-language-card.mjs  check-gha-phase.sh  check-multi-format-phase.sh  check-new-deps.sh  check-wi-linkage.sh  migrate-tokens-v2.mjs  migrate-tokens-v3.mjs  migrate-tokens-v4.mjs  migrate-tokens-v5.mjs  migrate-tokens-v6.mjs  migrate-tokens.mjs  propagate-i18n-keys.mjs  propagate-rust-errors.mjs  vmark-stats-json
src/: App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pt-BR.yml  zh-CN.yml  zh-TW.yml
src-tauri/src/: cli_install.rs  content_search.rs  external_editor.rs  file_ops.rs  lib.rs  mcp_server.rs  quarantine.rs  window_manager.rs
src-tauri/src/ai_provider/: cli.rs  mod.rs  rest_api.rs  rest_providers.rs  sink.rs  types.rs
src-tauri/src/genies/: commands.rs  mod.rs  parsing.rs  scanning.rs  tests.rs  types.rs
src-tauri/src/gha_workflow/: action_fetch.rs  actionlint.rs
src-tauri/src/hot_exit/: coordinator.rs
src-tauri/src/mcp_bridge/: server.rs  state.rs
src-tauri/src/mcp_config/: commands.rs
src-tauri/src/menu/: localized.rs
src-tauri/src/pandoc/: commands.rs
src-tauri/src/pdf_export/: bookmarks.rs  commands.rs  renderer.rs
src-tauri/src/workflow/: commands.rs  expressions.rs  genie_step.rs  mod.rs  runner.rs  step_config.rs  template.rs  types.rs
src/contexts/: WindowContext.test.tsx  WindowContext.tsx
src/export/: PdfExportDialog.tsx  PdfSettingsSidebar.tsx  fontEmbedder.ts  katexFontEmbed.ts  pandocExport.test.ts  pandocExport.ts  pdf-export-dialog.css  pdfHtmlTemplate.ts  useExportOperations.ts
src/hooks/: useCrashRecoveryStartup.ts  useDismissOnOutsideOrEscape.test.tsx  useDismissOnOutsideOrEscape.ts  useDragDropOpen.ts  useExternalFileChanges.test.ts  useExternalFileChanges.ts  useFileOpen.ts  useFileSave.ts  useFinderFileOpen.ts  useGenieInvocation.ts  useHistoryRecovery.test.ts  useHistoryRecovery.ts  useImageContextMenu.ts  useImageDragDrop.ts  useMcpHealthCheck.ts  useRecentFilesMenuEvents.ts  useRecentWorkspacesMenuEvents.ts  useUpdateChecker.ts  useUpdateOperations.ts  useViewMenuEvents.ts  useViewShortcuts.ts  useWorkflowExecution.ts  useWorkspaceBootstrap.ts  useWorkspaceMenuEvents.ts
src/pages/: PdfExportPage.tsx
src/plugins/: security.test.ts
src/stores/: contentSearchStore.ts  documentStore.test.ts  documentStore.ts  geniesStore.ts  lintStore.ts  mcpCheckpointPersistence.ts  mcpCheckpointStore.ts  settingsStore.ts  tabStore.ts  workflowApprovalStore.ts  workflowEditStore.ts  workflowPreviewStore.ts  workflowViewStore.ts
src/styles/: index.css
vmark-mcp-server/: package.json
website/: index.md
(+321 files in other folders)
