[package]
name = "vmark"
version = "0.7.7"
description = "The plain-text workspace where humans and AI collaborate"
authors = ["Xiaolai"]
license = "ISC"
edition = "2021"

[lib]
name = "vmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = "0.8"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
regex = "1"
urlencoding = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "process", "io-util", "time"] }
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
portable-pty = "0.9"
toml = "0.8"
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tempfile = "3"
sha2 = "0.10"
gethostname = "0.5"
rust-i18n = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
xattr = "1"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSImage", "NSResponder", "NSDocumentController", "NSPrintInfo", "NSPrintOperation", "NSView", "NSWindow", "NSGraphics"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSData", "NSDate", "NSRunLoop", "NSError", "NSDictionary", "NSProcessInfo"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKNavigation", "WKNavigationDelegate", "WKPDFConfiguration", "block2", "objc2-core-foundation"] }
objc2-pdf-kit = { version = "0.3", features = ["PDFDocument", "PDFOutline", "PDFPage", "PDFDestination"] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop", "CFString"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

# Tauri's `test` feature enables mock_app / mock_builder for command-wiring
# tests (fs scope extension, path validation, etc.). It is scoped to non-
# Windows targets because the MockRuntime test binary triggers
# STATUS_ENTRYPOINT_NOT_FOUND (exit code 0xc0000139) at startup on
# windows-latest runners — the build links but the loader can't resolve
# a symbol in the test DLL path. macOS and Linux are fine. Callers of
# tauri::test are cfg-gated accordingly in tests.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }

# Release profile tuned for distribution.
# - lto = "thin": ~5–8% smaller binary, ~25% slower link, retains good per-fn opt.
# - codegen-units = 1: aggressive optimization across the crate; slower builds.
# - strip = "symbols": drop symbol tables; macOS keeps a separate .dSYM if produced.
# - panic = "abort": ~2–3% smaller; safe because the codebase has no `catch_unwind`.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
